--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section class="seccion1-container">
         <div class="seccion-1">
             <div>
-                <h1>Hola, mi nombre es Darwin Hernandez <br>y hago mantenimientos</h1>
+                <h1>Hola, mi nombre es Darwin Hernandez <br>y construyo paginas web</h1>
                 <div>
                     <p>Soy graduado de bachiller y actualmente estudio una tecnología en .... el SENA y <br> entre al programa Oracle One en Alura Latam para aprender y mejorar mis conocimientos en programación. </p>
                 </div>
